WIP: logging improvements
Use `src/main/resources/log4j.properties` to control the finer details

--- a/server/eclipse-project/src/main/resources/log4j.properties
+++ b/server/eclipse-project/src/main/resources/log4j.properties
@@ -1,5 +1,13 @@
 log4j.rootLogger=INFO, stdout
-log4j.logger.election=INFO, logfile
+
+log4j.logger.us.freeandfair.corla.controller.ComparisonAuditController=DEBUG, logfile
+
+log4j.logger.us.freeandfair.corla.endpoint.SignOffAuditRound=DEBUG, logfile
+log4j.logger.us.freeandfair.corla.endpoint.StartAuditRound=DEBUG, logfile
+
+log4j.logger.us.freeandfair.corla.model.CountyContestComparisonAudit=DEBUG, logfile
+log4j.logger.us.freeandfair.corla.model.CountyDashboard=DEBUG, logfile
+log4j.logger.us.freeandfair.corla.model.Round=DEBUG, logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
